CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(practice VERSION 0.1 LANGUAGES ASM-ATT)
#SET(ASM_OPTIONS "${ASM_OPTIONS} -g")
#SET(CMAKE_ASM_FLAGS "${CFLAGS} ${ASM_OPTIONS}" )
#SET(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -g" )
#SET(CMAKE_BUILD_TYPE "Debug")
#SET(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
ADD_DEFINITIONS("-g")
ADD_EXECUTABLE(exit exit.s)
